fixed column header issues

--- a/public/views/block_list.html
+++ b/public/views/block_list.html
@@ -28,8 +28,8 @@
             <th translate>Height</th>
             <th translate>Timestamp</th>
             <th class="text-right" translate>Transactions</th>
-            <th class="text-right hidden-xs"><span class="ellipsis" translate>Votes</span></th>
-            <th class="text-right hidden-xs"><span class="ellipsis" translate>Fresh Stake</span></th>
+            <th class="text-right hidden-xs"><span class="th-ellipsis" translate>Votes</span></th>
+            <th class="text-right hidden-xs"><span class="th-ellipsis" translate>Fresh Stake</span></th>
             <th class="text-right" translate>Size</th>
           </tr>
         </thead>
