--- a/public/views/index.html
+++ b/public/views/index.html
@@ -13,9 +13,9 @@
             <tr>
               <th translate>Height</th>
               <th class="blockAgeTable" translate>Age</th>
-              <th class="text-right"><span class="ellipsis" translate>Transactions</span></th>
-              <th class="text-right hidden-xs"><span class="ellipsis" translate>Votes</span></th>
-              <th class="text-right hidden-xs"><span class="ellipsis" translate>Fresh Stake</span></th>
+              <th class="text-right"><span class="th-ellipsis" translate>Transactions</span></th>
+              <th class="text-right hidden-xs"><span class="th-ellipsis" translate>Votes</span></th>
+              <th class="text-right hidden-xs"><span class="th-ellipsis" translate>Fresh Stake</span></th>
               <th class="text-right" translate>Size</th>
             </tr>
           </thead>
