--- a/public/src/scss/common.scss
+++ b/public/src/scss/common.scss
@@ -571,19 +571,21 @@ thead {
   background-color: #fff;
 }
 
-.btn-default {
-  background-color: #E7E7E7;
+.btn{
+  &-default {
+    background-color: #E7E7E7;
+  }
+  &-success {
+    background-color: #2FA4D7;
+    border: 2px solid #237FA7;
+  }
+  &-danger {
+    background-color: #AC0015;
+    border: 2px solid #6C0000;
+  }
 }
 
-.btn-success {
-  background-color: #2FA4D7;
-  border: 2px solid #237FA7;
-}
 
-.btn-danger {
-  background-color: #AC0015;
-  border: 2px solid #6C0000;
-}
 
 .blocks {
   width: 195px;
@@ -1032,6 +1034,10 @@ a.v_highlight_more {
 
 #search-form-mobile {
   margin-top: 15px;
+}
+
+.empty {
+  display: none;
 }
 
 @media (max-width: 991px) {
