highlite quantum protected addresses

--- a/public/src/scss/theme.scss
+++ b/public/src/scss/theme.scss
@@ -6,6 +6,7 @@ $link-blue-hover: #0056b3;
 $white: #F4FBE8;
 $success: #4cd964;
 $danger: #f1453d;
+$quantum-protected: #4cd964
 
 // $theme-colors: (
 //   "primary": $link-blue,
