--- a/public/src/scss/common.scss
+++ b/public/src/scss/common.scss
@@ -62,6 +62,17 @@ a {
   }
 }
 
+a.quantum-protected {
+  color: $quantum-protected;
+  &:hover {
+    color: $quantum-protected;
+  }
+}
+
+.qp-lock {
+  color: $quantum-protected;
+}
+
 /* Styling for the ngProgress itself */
 #ngProgress {
   background-color: $link-blue !important;
