--- a/public/views/transaction/tx.html
+++ b/public/views/transaction/tx.html
@@ -55,7 +55,9 @@
               <div class="ellipsis">
                 <a href="/tx/{{vin.txid}}/>/{{vin.vout}}" title="Outpoint: {{vin.txid}},{{vin.vout}}"></a> 
                   <span data-ng-show="vin.notAddr">{{vin}}</span>
-                <a href="/address/{{vin.addr}}" data-ng-show="!vin.notAddr">{{vin.addr}}</a>
+                  <span data-ng-show="vin.quantumProtected" class="fa fa-lock qp-lock"></span>
+                <a data-ng-show="vin.quantumProtected" class="quantum-protected" href="/address/{{vin.addr}}" data-ng-show="!vin.notAddr">{{vin.addr}}</a>
+                <a data-ng-show="!vin.quantumProtected" href="/address/{{vin.addr}}" data-ng-show="!vin.notAddr">{{vin.addr}}</a>
               </div>
               <div data-ng-show="vin.unconfirmedInput" class="text-danger"> 
                 <span class="glyphicon glyphicon-warning-sign"></span> 
@@ -109,7 +111,9 @@
               <div class="ellipsis">
                 <a class="glyphicon glyphicon-chevron-right" href="/tx/{{vin.txid}}/>/{{vin.vout}}" title="Outpoint: {{vin.txid}},{{vin.vout}}"></a>
                 <span data-ng-show="vin.notAddr">{{vin.addr}}</span>
-                <a href="/address/{{vin.addr}}" data-ng-show="!vin.notAddr">{{vin.addr}}</a>
+                <span data-ng-show="vin.quantumProtected" class="fa fa-lock qp-lock"></span>
+                <a data-ng-show="vin.quantumProtected" class="quantum-protected" href="/address/{{vin.addr}}" data-ng-show="!vin.notAddr">{{vin.addr}}</a>
+                <a data-ng-show="!vin.quantumProtected" href="/address/{{vin.addr}}" data-ng-show="!vin.notAddr">{{vin.addr}}</a>
               </div>
               <div data-ng-show="vin.unconfirmedInput" class="text-danger"> 
                 <span class="glyphicon glyphicon-warning-sign"></span> 
@@ -163,7 +167,9 @@
               <div class="ellipsis">
                 <a class="glyphicon glyphicon-chevron-right" href="/tx/{{vin.txid}}/>/{{vin.vout}}" title="Outpoint: {{vin.txid}},{{vin.vout}}"></a>
                 <span data-ng-show="vin.notAddr">{{vin.addr}}</span>
-                <a href="/address/{{vin.addr}}" data-ng-show="!vin.notAddr">{{vin.addr}}</a>
+                <span data-ng-show="vin.quantumProtected" class="fa fa-lock qp-lock"></span>
+                <a data-ng-show="vin.quantumProtected" class="quantum-protected" href="/address/{{vin.addr}}" data-ng-show="!vin.notAddr">{{vin.addr}}</a>
+                <a data-ng-show="!vin.quantumProtected" href="/address/{{vin.addr}}" data-ng-show="!vin.notAddr">{{vin.addr}}</a>
               </div>
               <div data-ng-show="vin.unconfirmedInput" class="text-danger"> 
                 <span class="glyphicon glyphicon-warning-sign"></span> 
@@ -217,7 +223,9 @@
               <div class="ellipsis">
                 <a class="glyphicon glyphicon-chevron-right" href="/tx/{{vin.txid}}/>/{{vin.vout}}" title="Outpoint: {{vin.txid}},{{vin.vout}}"></a>
                 <span data-ng-show="vin.notAddr">{{vin.addr}}</span>
-                <a href="/address/{{vin.addr}}" data-ng-show="!vin.notAddr">{{vin.addr}}</a>
+                <span data-ng-show="vin.quantumProtected" class="fa fa-lock qp-lock"></span>
+                <a data-ng-show="vin.quantumProtected" class="quantum-protected" href="/address/{{vin.addr}}" data-ng-show="!vin.notAddr">{{vin.addr}}</a>
+                <a data-ng-show="!vin.quantumProtected" href="/address/{{vin.addr}}" data-ng-show="!vin.notAddr">{{vin.addr}}</a>
               </div>
               <div data-ng-show="vin.unconfirmedInput" class="text-danger"> 
                 <span class="glyphicon glyphicon-warning-sign"></span> 
@@ -280,8 +288,10 @@
                 </span>
               </div>
               <div class="ellipsis">
-		<span data-ng-show="vout.notAddr">{{vout.scriptPubKey.hex}}</span>
-                <a href="/address/{{address}}" data-ng-show="!vout.notAddr" data-ng-repeat="address in vout.scriptPubKey.addresses track by $index">{{address}}</a>
+                <span data-ng-show="vout.notAddr">{{vout.scriptPubKey.hex}}</span>
+                <span data-ng-show="vout.quantumProtected" class="fa fa-lock qp-lock"></span>
+                <a href="/address/{{address}}" data-ng-show="!vout.notAddr && !vout.quantumProtected" data-ng-repeat="address in vout.scriptPubKey.addresses track by $index">{{address}}</a>
+                <a href="/address/{{address}}" data-ng-show="!vout.notAddr && vout.quantumProtected" data-ng-repeat="address in vout.scriptPubKey.addresses track by $index" class="quantum-protected">{{address}}</a>
               </div>
             </div>
           </div>
