--- a/public/views/index.html
+++ b/public/views/index.html
@@ -6,6 +6,42 @@
   <div class="container">
     <div id="home" class="row">
       <div class="layout col-xs-15 col-md-12 m-container">
+        <h1 class="mt-0" translate>Chain State</h1>
+        <div class="row">
+          <div class="col-xs-12 col-md-6 data-viz">
+            <div class="row">
+              <div class="dv-text-row"><strong>Total Supply </strong> <span class="pull-right">7,414,189.1515155869 DCR</span></div>
+            </div>
+            <div class="row">
+              <div class="dv-text-row"><strong>Total Supply </strong> <span class="pull-right">7,414,189.1515155869 DCR</span></div>
+            </div>
+            <div class="row">
+              <div class="dv-text-row"><strong>Total Supply </strong> <span class="pull-right">7,414,189.1515155869 DCR</span></div>
+            </div>
+          </div>
+          <div class="circle-stats col-xs-12 col-md-3">
+            <div class="c100 p25 green">
+              <span>25%</span>
+              <div class="slice">
+                  <div class="bar"></div>
+                  <div class="fill"></div>
+              </div>
+            </div>
+            <div class="dv-title"><strong>Q Chain <br> Dominance</strong></div>            
+          </div>
+          <div class="circle-stats col-xs-12 col-md-3">
+            <div class="c100 p25 green">
+              <span>25%</span>
+              <div class="slice">
+                  <div class="bar"></div>
+                  <div class="fill"></div>
+              </div>
+            </div>
+            <div class="dv-title"><strong>% Quantum<br> Transactions</strong></div>              
+          </div>
+        </div>
+      </div>
+      <div class="layout col-xs-15 col-md-12 m-container">
         <div id="search-form-mobile" class="visible-xs" data-ng-include src="'/views/includes/search.html'"></div>
         <h1 class="mt-0" translate>Latest Blocks</h1>
         <table class="table table-hover" style="table-layout: fixed">
