--- a/public/views/index.html
+++ b/public/views/index.html
@@ -13,15 +13,15 @@
               <div class="dv-text-row"><strong>Total Supply </strong> <span class="pull-right">7,414,189.1515155869 DCR</span></div>
             </div>
             <div class="row">
-              <div class="dv-text-row"><strong>Total Supply </strong> <span class="pull-right">7,414,189.1515155869 DCR</span></div>
+              <div class="dv-text-row"><strong>Quantum Supply Share</strong> <span class="pull-right">7,414,189.1515155869 DCR</span></div>
             </div>
             <div class="row">
-              <div class="dv-text-row"><strong>Total Supply </strong> <span class="pull-right">7,414,189.1515155869 DCR</span></div>
+              <div class="dv-text-row"><strong>Non-Q Supply Share</strong> <span class="pull-right">7,414,189.1515155869 DCR</span></div>
             </div>
           </div>
           <div class="circle-stats col-xs-12 col-md-3">
-            <div class="c100 p25 green">
-              <span>25%</span>
+            <div class="small c100 p96 hx-green">
+              <span>96%</span>
               <div class="slice">
                   <div class="bar"></div>
                   <div class="fill"></div>
@@ -30,7 +30,7 @@
             <div class="dv-title"><strong>Q Chain <br> Dominance</strong></div>            
           </div>
           <div class="circle-stats col-xs-12 col-md-3">
-            <div class="c100 p25 green">
+            <div class="small c100 p25 standard">
               <span>25%</span>
               <div class="slice">
                   <div class="bar"></div>
