--- a/public/views/index.html
+++ b/public/views/index.html
@@ -5,7 +5,7 @@
 <section data-ng-controller="IndexController" data-ng-init="index()">
   <div class="container">
     <div id="home" class="row">
-      <div ng-if="!loadingStats" class="layout col-xs-15 col-md-12 m-container">
+      <div ng-if="loadingStats" class="layout col-xs-15 col-md-12 m-container">
         <h1 class="mt-0" translate>Chain State</h1>
         <h4>Loading Stats</h4>
         <div class="progress">
