--- a/public/views/index.html
+++ b/public/views/index.html
@@ -9,8 +9,8 @@
         <h1 class="mt-0" translate>Chain State</h1>
         <h4>Loading Stats</h4>
         <div class="progress">
-          <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="{{sync.syncPercentage}}" aria-valuemin="0" aria-valuemax="100" style="width: {{sync.syncPercentage}}%">
-            <span class="sr-only">{{sync.syncPercentage}}</span>
+          <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="{{sync.syncPercentage - 5}}" aria-valuemin="0" aria-valuemax="100" style="width: {{sync.syncPercentage - 5}}%">
+            <span class="sr-only">{{sync.syncPercentage - 5}}</span>
           </div>
         </div>
       </div>
@@ -19,18 +19,18 @@
         <div class="row">
           <div class="col-xs-12 col-md-6 data-viz">
             <div class="row">
-              <div class="dv-text-row"><strong>Total Supply </strong> <span class="pull-right">7,414,189.1515155869 DCR</span></div>
+              <div class="dv-text-row"><strong>Total Supply </strong> <span class="pull-right">{{pqStats.totalHx}} Hx</span></div>
             </div>
             <div class="row">
-              <div class="dv-text-row"><strong>Quantum Supply Share</strong> <span class="pull-right">7,414,189.1515155869 DCR</span></div>
+              <div class="dv-text-row"><strong>Quantum Supply Share</strong> <span class="pull-right">{{ pqStats.pqHx }} Hx</span></div>
             </div>
             <div class="row">
-              <div class="dv-text-row"><strong>Non-Q Supply Share</strong> <span class="pull-right">7,414,189.1515155869 DCR</span></div>
+              <div class="dv-text-row"><strong>Non-Q Supply Share</strong> <span class="pull-right">{{ pqStats.totalHx - pqStats.pqHx }} Hx</span></div>
             </div>
           </div>
           <div class="circle-stats col-xs-12 col-md-3">
-            <div class="small c100 p96 hx-green">
-              <span>96%</span>
+            <div class="small c100 hx-green" ng-class="totalPqClass">
+              <span>{{ ((pqStats.pqHx / pqStats.totalHx) * 100).toFixed(1) }}%</span>
               <div class="slice">
                   <div class="bar"></div>
                   <div class="fill"></div>
@@ -39,14 +39,14 @@
             <div class="dv-title"><strong>Q Chain <br> Dominance</strong></div>            
           </div>
           <div class="circle-stats col-xs-12 col-md-3">
-            <div class="small c100 p25 standard">
-              <span>25%</span>
+            <div class="small c100 hx-green" ng-class="lastDayClass">
+              <span>{{ (pqStats.pqTxCount24h/pqStats.totalTxCount24h) > 0 ? ((pqStats.pqTxCount24h / pqStats.totalTxCount24h) * 100).toFixed(1) : '0.0' }}%</span>
               <div class="slice">
-                  <div class="bar"></div>
-                  <div class="fill"></div>
+                <div class="bar"></div>
+                <div class="fill"></div>
               </div>
             </div>
-            <div class="dv-title"><strong>% Quantum<br> Transactions</strong></div>              
+            <div class="dv-title"><strong>Last 24<br> Hours</strong></div>              
           </div>
         </div>
       </div>
