--- a/public/views/statistics.html
+++ b/public/views/statistics.html
@@ -1,85 +1,41 @@
 <div data-ng-include src="'/views/includes/connection.html'"></div>
-<div data-ng-controller="StatisticsController">
-  <div class="secondary_navbar hidden-xs hidden-sm" scroll data-ng-class="{'hidden': !secondaryNavbar}" data-ng-show="block.hash" data-ng-init="hideSNavbar=0">
-    <div data-ng-if="!hideSNavbar">
-      <div class="row">
-        <div class="col-md-1">
-          <a href="/block/{{block.previousblockhash}}"><span class="lead glyphicon glyphicon-chevron-left"></span></a>
-        </div>
-        <div class="col-md-10">
-          <div class="row">
-            <div class="col-md-5">
-              <h3 class="text-left"><span translate>Block</span> #{{block.height}}</h3>
+<div data-ng-controller="StatisticsController" data-ng-init="onInit()">
+  <div class="container">
+    <div ng-if="!loadingStats" class="layout col-xs-15 col-md-12 m-container">
+        <h1 class="mt-0" translate>Chain State</h1>
+        <div class="row">
+          <div class="col-xs-12 col-md-6 data-viz">
+            <div class="row">
+              <div class="dv-text-row"><strong>Total Supply </strong> <span class="pull-right">{{pqStats.totalHx}} Hx</span></div>
             </div>
-            <p class="col-md-6 ellipsis text-left">
-                <strong>Hash</strong> {{block.hash}}
-            </p>
-            <div class="col-md-1 text-left">
-                <span class="btn-copy" ngclipboard data-clipboard-text={{block.hash}}></span>
+            <div class="row">
+              <div class="dv-text-row"><strong>Quantum Supply Share</strong> <span class="pull-right">{{ pqStats.pqHx }} Hx</span></div>
+            </div>
+            <div class="row">
+              <div class="dv-text-row"><strong>Non-Q Supply Share</strong> <span class="pull-right">{{ pqStats.totalHx - pqStats.pqHx }} Hx</span></div>
             </div>
           </div>
-        </div>
-        <div class="col-md-1">
-          <a data-ng-show="block.nextblockhash" href="/block/{{block.nextblockhash}}"><span class="lead glyphicon glyphicon-chevron-right"></span></a>
-        </div>
-      </div>
-    </div>
-    <div class="hide_snavbar">
-      <a href="#" data-ng-click="hideSNavbar=!hideSNavbar">
-        <span data-ng-show="hideSNavbar"><span class="text-muted glyphicon glyphicon-chevron-down"></span></span>
-        <span data-ng-show="!hideSNavbar"><span class="text-muted glyphicon glyphicon-chevron-up"></span></span>
-      </a>
-    </div>
-  </div>
-  <div class="layout col-xs-15 col-md-12 m-container">
-    <h1 class="mt-0" translate>Chain State</h1>
-    <div class="row">
-      <div class="col-xs-12 col-md-6 data-viz">
-        <div class="row">
-          <div class="dv-text-row">
-            <strong>Total Supply </strong>
-            <span class="pull-right">7,414,189.1515155869 DCR</span>
+          <div class="circle-stats col-xs-12 col-md-3">
+            <div class="small c100 hx-green" ng-class="totalPqClass">
+              <span>{{ ((pqStats.pqHx / pqStats.totalHx) * 100).toFixed(1) }}%</span>
+              <div class="slice">
+                  <div class="bar"></div>
+                  <div class="fill"></div>
+              </div>
+            </div>
+            <div class="dv-title"><strong>Q Chain <br> Dominance</strong></div>            
           </div>
-        </div>
-        <div class="row">
-          <div class="dv-text-row">
-            <strong>Quantum Supply Share</strong>
-            <span class="pull-right">7,414,189.1515155869 DCR</span>
-          </div>
-        </div>
-        <div class="row">
-          <div class="dv-text-row">
-            <strong>Non-Q Supply Share</strong>
-            <span class="pull-right">7,414,189.1515155869 DCR</span>
+          <div class="circle-stats col-xs-12 col-md-3">
+            <div class="small c100 hx-green" ng-class="lastDayClass">
+              <span>{{ (pqStats.pqTxCount24h/pqStats.totalTxCount24h) > 0 ? ((pqStats.pqTxCount24h / pqStats.totalTxCount24h) * 100).toFixed(1) : '0.0' }}%</span>
+              <div class="slice">
+                <div class="bar"></div>
+                <div class="fill"></div>
+              </div>
+            </div>
+            <div class="dv-title"><strong>Last 24<br> Hours</strong></div>              
           </div>
         </div>
       </div>
-      <div class="circle-stats col-xs-12 col-md-3">
-        <div class="small c100 p96 hx-green">
-          <span>96%</span>
-          <div class="slice">
-            <div class="bar"></div>
-            <div class="fill"></div>
-          </div>
-        </div>
-        <div class="dv-title">
-          <strong>Q Chain
-            <br> Dominance</strong>
-        </div>
-      </div>
-      <div class="circle-stats col-xs-12 col-md-3">
-        <div class="small c100 p25 standard">
-          <span>25%</span>
-          <div class="slice">
-            <div class="bar"></div>
-            <div class="fill"></div>
-          </div>
-        </div>
-        <div class="dv-title">
-          <strong>% Quantum
-            <br> Transactions</strong>
-        </div>
-      </div>
-    </div>
   </div>
 </div>
