--- a/public/views/statistics.html
+++ b/public/views/statistics.html
@@ -1,41 +1,77 @@
 <div data-ng-include src="'/views/includes/connection.html'"></div>
 <div data-ng-controller="StatisticsController" data-ng-init="onInit()">
-  <div class="container">
-    <div ng-if="!loadingStats" class="layout col-xs-15 col-md-12 m-container">
-        <h1 class="mt-0" translate>Chain State</h1>
-        <div class="row">
-          <div class="col-xs-12 col-md-6 data-viz">
-            <div class="row">
-              <div class="dv-text-row"><strong>Total Supply </strong> <span class="pull-right">{{pqStats.totalHx}} Hx</span></div>
-            </div>
-            <div class="row">
-              <div class="dv-text-row"><strong>Quantum Supply Share</strong> <span class="pull-right">{{ pqStats.pqHx }} Hx</span></div>
-            </div>
-            <div class="row">
-              <div class="dv-text-row"><strong>Non-Q Supply Share</strong> <span class="pull-right">{{ pqStats.totalHx - pqStats.pqHx }} Hx</span></div>
-            </div>
+  <div ng-if="!loadingStats.Pq && !loadingStats.Mining && !loadingStats.Ticket" class="container">
+    <div class="layout col-xs-15 col-md-12 m-container">
+      <h1 class="mt-0" translate>Chain State</h1>
+      <div class="row">
+        <div class="col-xs-12 col-md-6 data-viz">
+          <div class="row">
+            <div class="dv-text-row"><strong>Total Supply </strong> <span class="pull-right">{{pqStats.totalHx}} Hx</span></div>
           </div>
-          <div class="circle-stats col-xs-12 col-md-3">
-            <div class="small c100 hx-green" ng-class="totalPqClass">
-              <span>{{ ((pqStats.pqHx / pqStats.totalHx) * 100).toFixed(1) }}%</span>
-              <div class="slice">
-                  <div class="bar"></div>
-                  <div class="fill"></div>
-              </div>
-            </div>
-            <div class="dv-title"><strong>Q Chain <br> Dominance</strong></div>            
+          <div class="row">
+            <div class="dv-text-row"><strong>Quantum Supply Share</strong> <span class="pull-right">{{ pqStats.pqHx }} Hx</span></div>
           </div>
-          <div class="circle-stats col-xs-12 col-md-3">
-            <div class="small c100 hx-green" ng-class="lastDayClass">
-              <span>{{ (pqStats.pqTxCount24h/pqStats.totalTxCount24h) > 0 ? ((pqStats.pqTxCount24h / pqStats.totalTxCount24h) * 100).toFixed(1) : '0.0' }}%</span>
-              <div class="slice">
+          <div class="row">
+            <div class="dv-text-row"><strong>Non-Q Supply Share</strong> <span class="pull-right">{{ pqStats.totalHx - pqStats.pqHx }} Hx</span></div>
+          </div>
+        </div>
+        <div class="circle-stats col-xs-12 col-md-3">
+          <div class="small c100 hx-green" ng-class="totalPqClass">
+            <span>{{ ((pqStats.pqHx / pqStats.totalHx) * 100).toFixed(1) }}%</span>
+            <div class="slice">
                 <div class="bar"></div>
                 <div class="fill"></div>
-              </div>
             </div>
-            <div class="dv-title"><strong>Last 24<br> Hours</strong></div>              
+          </div>
+          <div class="dv-title"><strong>Q Chain <br> Dominance</strong></div>            
+        </div>
+        <div class="circle-stats col-xs-12 col-md-3">
+          <div class="small c100 hx-green" ng-class="lastDayClass">
+            <span>{{ (pqStats.pqTxCount24h/pqStats.totalTxCount24h) > 0 ? ((pqStats.pqTxCount24h / pqStats.totalTxCount24h) * 100).toFixed(1) : '0.0' }}%</span>
+            <div class="slice">
+              <div class="bar"></div>
+              <div class="fill"></div>
+            </div>
+          </div>
+          <div class="dv-title"><strong>Last 24<br> Hours</strong></div>              
+        </div>
+      </div>
+    </div>
+    <div class="layout col-xs-15 col-md-12 m-container">
+      <h1 class="mt-0" translate>Mining Statistics</h1>
+      <div class="row">
+        <div class="col-xs-12 col-md-6 data-viz">
+          <div class="row">
+            <div class="dv-text-row"><strong>Version </strong> <span class="pull-right">{{mStats.version }}</span></div>
+          </div>
+          <div class="row">
+            <div class="dv-text-row"><strong>Protocol Version</strong> <span class="pull-right">{{ mStats.protocolversion }}</span></div>
+          </div>
+          <div class="row">
+            <div class="dv-text-row"><strong>Blocks</strong> <span class="pull-right">{{ mStats.blocks }}</span></div>
+          </div>
+          <div class="row">
+            <div class="dv-text-row"><strong>Time Offset</strong> <span class="pull-right">{{ mStats.timeoffset }}</span></div>
+          </div>
+          <div class="row">
+            <div class="dv-text-row"><strong>Relay Fee</strong> <span class="pull-right">{{ mStats.relayfee }}</span></div>
+          </div>
+        </div>
+        <div class="col-xs-12 col-md-6 data-viz">
+          <div class="row">
+            <div class="dv-text-row"><strong>Connections </strong> <span class="pull-right">{{mStats.connections }}</span></div>
+          </div>
+          <div class="row">
+            <div class="dv-text-row"><strong>Difficulty</strong> <span class="pull-right">{{ mStats.difficulty }}</span></div>
+          </div>
+          <div class="row">
+            <div class="dv-text-row"><strong>Proxy</strong> <span class="pull-right">{{ mStats.proxy }}</span></div>
+          </div>
+          <div class="row">
+            <div class="dv-text-row"><strong>Errors</strong> <span class="pull-right">{{ mStats.errors }}</span></div>
           </div>
         </div>
       </div>
+    </div>
   </div>
 </div>
