--- a/public/src/scss/common.scss
+++ b/public/src/scss/common.scss
@@ -327,6 +327,9 @@ thead {
   border-radius: 10px;
   padding: 28px 42px;
   margin: 30px 0 0;
+  &.stats-loader {
+    margin: 0;
+  }
   &.tx {
     padding: 30px;
   }
