--- a/public/views/index.html
+++ b/public/views/index.html
@@ -5,13 +5,20 @@
 <section data-ng-controller="IndexController" data-ng-init="index()">
   <div class="container">
     <div id="home" class="row">
-      <div ng-if="loadingStats" class="layout col-xs-15 col-md-12 m-container">
-        <h1 class="mt-0" translate>Chain State</h1>
-        <h4>Loading Stats</h4>
-        <div class="progress">
-          <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="{{sync.syncPercentage - 5}}" aria-valuemin="0" aria-valuemax="100" style="width: {{sync.syncPercentage - 5}}%">
-            <span class="sr-only">{{sync.syncPercentage - 5}}</span>
-          </div>
+      <div ng-if="loadingStats" class="layout col-xs-15 col-md-12 m-container stats-loader">
+        <div class="sk-cube-grid index">
+          <div class="sk-cube sk-cube1"></div>
+          <div class="sk-cube sk-cube2"></div>
+          <div class="sk-cube sk-cube3"></div>
+          <div class="sk-cube sk-cube4"></div>
+          <div class="sk-cube sk-cube5"></div>
+          <div class="sk-cube sk-cube6"></div>
+          <div class="sk-cube sk-cube7"></div>
+          <div class="sk-cube sk-cube8"></div>
+          <div class="sk-cube sk-cube9"></div>
+        </div>
+        <div class="loading-text-index">
+          Loading chain state data, please wait...
         </div>
       </div>
       <div ng-if="!loadingStats" class="layout col-xs-15 col-md-12 m-container">
