--- a/public/views/index.html
+++ b/public/views/index.html
@@ -26,7 +26,7 @@
         <div class="row">
           <div class="col-xs-12 col-md-6 data-viz">
             <div class="row">
-              <div class="dv-text-row"><strong>Total Supply </strong> <span class="pull-right">{{pqStats.totalHx}} Hx</span></div>
+              <div class="dv-text-row"><strong>Circulating Supply </strong> <span class="pull-right">{{pqStats.totalHx}} Hx</span></div>
             </div>
             <div class="row">
               <div class="dv-text-row"><strong>Quantum Supply Share</strong> <span class="pull-right">{{ pqStats.pqHx }} Hx</span></div>
