--- a/public/views/statistics.html
+++ b/public/views/statistics.html
@@ -90,6 +90,12 @@
   </div>
   <div class="container">
     <div class="layout col-xs-15 col-md-12 m-container">
+        <!-- <div class="btn-group mb-2" role="group" aria-label="Unit of Measurement">
+            <button type="button" class="btn btn-default bg">Kilo</button>
+            <button type="button" class="btn btn-default bg">Mega</button>
+            <button type="button" class="btn btn-default bg">Giga</button>
+            <button type="button" class="btn btn-default bg">Tera</button>
+          </div> -->
       <div id="hash-graph" style="width:auto; height:500px;"></div>
     </div>
   </div>
